--- a/exercise_two/dog_age_calculator.html
+++ b/exercise_two/dog_age_calculator.html
@@ -17,6 +17,14 @@
       // =============================================
       var name = "Bogdan";
       var age = 27;
+      
+      let isHungry = "true"
+
+      console.log(name)
+
+      console.log(age)
+      
+      console.log(isHungry)
       // ==============================================
 
       // Please don't touch this code
